feat: implement Google OAuth 2.0 integration (Issue #55)
Backend Changes:
- Add Google OAuth 2.0 authentication flow with ID token verification
- Install google-auth-library package for OAuth handling
- Implement OAuth initiation endpoint (GET /api/auth/google)
- Implement OAuth callback endpoint (GET /api/auth/google/callback)
- Add profile picture support from Google OAuth
- Store user profile pictures in database and include in JWT tokens
- Re-fetch user after picture update to ensure JWT has latest data
- Add OAuth environment variables to .env.example
- Create comprehensive OAuth setup documentation (GOOGLE_OAUTH_SETUP.md)

Frontend Changes:
- Update GoogleSignInButton to redirect to OAuth endpoint
- Add JWT token decoding in auth context (signInWithToken method)
- Create AuthCallbackPage to handle OAuth redirect
- Add auth callback route to App.tsx
- Fix infinite loop in OAuth callback using useRef
- Display Google profile pictures in dashboard sidebar

Bug Fixes:
- Fix profile picture not updating by re-fetching user after DB update
- Fix infinite render loop in auth callback with useRef guard
- Fix Add Interviewer button to open modal instead of navigating
- Fix dashboard navigation buttons (Add Interviewer, View Reports)

Security:
- CSRF protection via state parameter with timestamp
- ID token verification with Google's audience check
- Proper error handling and user-friendly error messages

Issue: #55

--- a/server/.env.example
+++ b/server/.env.example
@@ -20,3 +20,9 @@ RATE_LIMIT_TIME_WINDOW=60000
 
 # API Documentation
 SWAGGER_ENABLED=true
+
+# Google OAuth 2.0 (Issue #55)
+# Get these from Google Cloud Console: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
