--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^8.0.1",
+    "@fastify/oauth2": "^8.1.2",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/sensible": "^5.6.0",
     "@fastify/swagger": "^8.14.0",
@@ -39,6 +40,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
+    "googleapis": "^164.1.0",
     "nanoid": "^5.0.9",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0"
